--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                 Happy birthday,<br>LJY
             </x-sign>
             <x-sign>
-                Happy birthday,
-                <br><small>LJY</small>
+                Happy birthday, LJY
             </x-sign>
             <x-sign>
                 Happy birthday,LJY
