--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 Happy birthday,<br>LJY
             </x-sign>
             <x-sign>
-                Happy birthday, LJY
+                Happy birthday<br>LJY
             </x-sign>
             <x-sign>
                 Happy birthday,LJY
