--- a/index.html
+++ b/index.html
@@ -25,30 +25,30 @@
 
 <div class="wrap" id="wrap">
     <div class="wrap2" id="wrap2">
-        <div class="page" id="time"></div>
+             <div class="page" id="time"></div>
         <div class="page" style="background: #0a0901">
             <p>实在不知道说啥放些你的照片吧</p>
             <img src="images/a.jpg" >
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/2.jpg">
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/3.jpg">
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/4.jpg">
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/6.jpg">
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/7.jpg">
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/8.jpg">
         </div>
-        <div class="page">
+        <div class="page"style="background: #0a0901">
             <img src="images/9.jpg">
         </div>
         <div class="page" style="background: #0a0901">
