--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="wrap" id="wrap">
     <div class="wrap2" id="wrap2">
-             <div class="page" id="time"></div>
+        <div class="page" id="time"></div>
         <div class="page" style="background: #0a0901">
             <p>实在不知道说啥放些你的照片吧</p>
             <img src="images/a.jpg" >
@@ -54,6 +54,7 @@
         <div class="page" style="background: #0a0901">
             <p>最后再放一张你的姐妹</p>
             <img src="images/10.jpg">
+            <p>👇</p>
         </div>
         <div class="page" style="background: #0a0901">
             <x-sign>
@@ -66,7 +67,8 @@
                 Happy birthday,<br>LJY
             </x-sign>
             <x-sign>
-                Happy birthday<br>LJY
+                Happy birthday
+                <br><small>LJY</small>
             </x-sign>
             <x-sign>
                 Happy birthday,LJY
